--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fisify.app">
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/logo_icon"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo_icon_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Fisify">
-        <activity
-            android:name=".Main"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Fisify.Fullscreen">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fisify.app">
+    <application android:label="@string/app_name" android:icon="@mipmap/logo_icon" android:roundIcon="@mipmap/logo_icon_round" android:theme="@style/Theme.Fisify">
+        <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
