--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fisify.app">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <application android:label="@string/app_name" android:icon="@mipmap/logo_icon" android:roundIcon="@mipmap/logo_icon_round" android:usesCleartextTraffic="true">
+    <application android:label="@string/app_name" android:icon="@mipmap/logo_icon" android:roundIcon="@mipmap/logo_icon_round">
         <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
