--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fisify.app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.fisify.app"
+    tools:ignore="ProtectedPermissions">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.CAPTURE_SECURE_VIDEO_OUTPUT" />
+    <uses-permission android:name="android.webkit.PermissionRequest" />
+
 
     <application
         android:label="@string/app_name"
         android:icon="@mipmap/logo_icon"
         android:roundIcon="@mipmap/logo_icon_round"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify">
+        <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
