--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,3 @@
-/*
-plugins {
-    id 'com.android.application'
-} */
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
@@ -13,8 +9,8 @@ android {
         applicationId "com.fisify.app"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 32
-        versionName "1.41"
+        versionCode 33
+        versionName "1.42"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,6 +28,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.fisify.app'
 }
 
 dependencies {
