--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         android:icon="@mipmap/logo_icon"
         android:roundIcon="@mipmap/logo_icon_round"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify"
-            android:exported="true" android:screenOrientation="portrait" android:windowSoftInputMode="adjustResize">
+        <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify.FullScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
