--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,17 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
+### APPLICATION VARIABLES ###
+
+# Release (Production)
+WEBVIEW_URL_RELEASE=https://app.fisify.com
+VERSION_CHECK_ENDPOINT_URL_RELEASE=https://production-backend-fisify.herokuapp.com/app/version
+NOTIFICATION_DEVICES_URL_RELEASE=https://production-backend-fisify.herokuapp.com/api/devices
+FIREBASE_CLIENT_ID_RELEASE=602430523502-vdpv1vadcrd1em4a8nbo19hp4cdovgjn.apps.googleusercontent.com
+
+# Debug (Development/Staging)
+WEBVIEW_URL_DEBUG=https://frontend-git-staging-fisify.vercel.app/
+VERSION_CHECK_ENDPOINT_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/app/version
+NOTIFICATION_DEVICES_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/api/devices
+FIREBASE_CLIENT_ID_DEBUG=811151055222-b233lsqtl1bs7lssdc8103apr8bl9de4.apps.googleusercontent.com
