Handle external URL's from device's browser (Webinars()

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ FIREBASE_CLIENT_ID_RELEASE=602430523502-vdpv1vadcrd1em4a8nbo19hp4cdovgjn.apps.go
 
 # Debug (Development/Staging)
 WEBVIEW_URL_DEBUG=https://frontend-git-staging-fisify.vercel.app/
+#WEBVIEW_URL_DEBUG=https://8844-84-78-155-157.ngrok-free.app
 VERSION_CHECK_ENDPOINT_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/app/version
 NOTIFICATION_DEVICES_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/api/devices
 FIREBASE_CLIENT_ID_DEBUG=811151055222-b233lsqtl1bs7lssdc8103apr8bl9de4.apps.googleusercontent.com
