Improve significantly the first load time

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ NOTIFICATION_DEVICES_URL_RELEASE=https://production-backend-fisify.herokuapp.com
 FIREBASE_CLIENT_ID_RELEASE=602430523502-vdpv1vadcrd1em4a8nbo19hp4cdovgjn.apps.googleusercontent.com
 
 # Debug (Development/Staging)
-WEBVIEW_URL_DEBUG=https://frontend-git-staging-fisify.vercel.app/
+WEBVIEW_URL_DEBUG=https://frontend-git-staging-fisify.vercel.app
 #WEBVIEW_URL_DEBUG=https://43d7-84-78-155-157.ngrok-free.app
 VERSION_CHECK_ENDPOINT_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/app/version
 NOTIFICATION_DEVICES_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/api/devices
