--- a/gradle.properties
+++ b/gradle.properties
@@ -20,13 +20,17 @@ android.useAndroidX=true
 
 # Release (Production)
 WEBVIEW_URL_RELEASE=https://app.fisify.com
+WEBVIEW_HOST_RELEASE=app.fisify.com
 VERSION_CHECK_ENDPOINT_URL_RELEASE=https://production-backend-fisify.herokuapp.com/app/version
 NOTIFICATION_DEVICES_URL_RELEASE=https://production-backend-fisify.herokuapp.com/api/devices
 FIREBASE_CLIENT_ID_RELEASE=602430523502-vdpv1vadcrd1em4a8nbo19hp4cdovgjn.apps.googleusercontent.com
+EXPECTED_WEBVIEW_PIN_RELEASE=ySxDVaVBZADqqzeFADxJ/CeO7XhKgL6nSV+HA3PJhGQ=
 
 # Debug (Development/Staging)
 WEBVIEW_URL_DEBUG=https://frontend-git-staging-fisify.vercel.app
 #WEBVIEW_URL_DEBUG=https://43d7-84-78-155-157.ngrok-free.app
+WEBVIEW_HOST_DEBUG=frontend-git-staging-fisify.vercel.app
 VERSION_CHECK_ENDPOINT_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/app/version
 NOTIFICATION_DEVICES_URL_DEBUG=https://staging-backend-fisify.herokuapp.com/api/devices
 FIREBASE_CLIENT_ID_DEBUG=811151055222-b233lsqtl1bs7lssdc8103apr8bl9de4.apps.googleusercontent.com
+EXPECTED_WEBVIEW_PIN_DEBUG=6dUoy56RTnvuYedwmdGBbKMPEK531PHEuoLTATx/J7c=
