--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         android:label="@string/app_name"
         android:icon="@mipmap/logo_icon"
         android:roundIcon="@mipmap/logo_icon_round"
+        android:inputType="textNoSuggestions|textVisiblePassword"
+        tools:ignore="UnusedAttribute"
         android:usesCleartextTraffic="true">
         <activity android:name=".Main" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@style/Theme.Fisify.FullScreen"
             android:exported="true">
